@@ -4,7 +4,7 @@ module Netzke
     def initialize(*args)
       super
       config[:default_properties] ||= []
-      NetzkePreference.custom_field = config[:host_widget_name]
+      NetzkePreference.widget_name = config[:host_widget_name]
       
       # Create default properties
       config[:default_properties].each do |p|
@@ -17,9 +17,9 @@ module Netzke
       config[:conditions] ||= {}
       
       data_class = NetzkePreference
-      records = data_class.find(:all, :conditions => {:custom_field => config[:host_widget_name]})
+      records = data_class.find(:all, :conditions => {:widget_name => config[:host_widget_name]})
       
-      NetzkePreference.custom_field = config[:host_widget_name]
+      NetzkePreference.widget_name = config[:host_widget_name]
       
       source = {}
       records.each do |r|
@@ -31,7 +31,7 @@ module Netzke
     
     def submit_source(params = {})
       data = JSON.parse(params[:data])
-      NetzkePreference.custom_field = config[:host_widget_name]
+      NetzkePreference.widget_name = config[:host_widget_name]
       data.each_pair do |k,v|
         NetzkePreference[k.underscore] = v
       end
